--- a/mia/Base.lproj/Me.storyboard
+++ b/mia/Base.lproj/Me.storyboard
@@ -186,7 +186,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vts-Pi-dMv">
-                                                    <rect key="frame" x="185" y="172" width="40" height="40"/>
+                                                    <rect key="frame" x="146" y="172" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="40" id="q3e-9T-B8L"/>
                                                         <constraint firstAttribute="height" constant="40" id="t4i-OY-0qZ"/>
@@ -196,7 +196,31 @@
                                                         <action selector="favoriteButtonPressed" destination="Ed6-aM-ZxE" eventType="touchUpInside" id="IkH-Pu-Afc"/>
                                                     </connections>
                                                 </button>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SCL-e0-Mfh">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q0n-se-8RI" userLabel="View Count View">
+                                                    <rect key="frame" x="186" y="181" width="33" height="22"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-ViewIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Krg-w3-3ms">
+                                                            <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ST5-ie-END">
+                                                            <rect key="frame" x="24" y="0.0" width="9" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="Krg-w3-3ms" secondAttribute="bottom" id="53b-J0-S1s"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ST5-ie-END" secondAttribute="trailing" id="6e0-Qw-Wdz"/>
+                                                        <constraint firstAttribute="bottom" secondItem="ST5-ie-END" secondAttribute="bottom" id="Lpt-Uy-wny"/>
+                                                        <constraint firstItem="Krg-w3-3ms" firstAttribute="leading" secondItem="Q0n-se-8RI" secondAttribute="leading" id="cUQ-yn-qNF"/>
+                                                        <constraint firstItem="ST5-ie-END" firstAttribute="leading" secondItem="Krg-w3-3ms" secondAttribute="trailing" constant="2" id="eEx-TO-qt3"/>
+                                                        <constraint firstItem="Krg-w3-3ms" firstAttribute="top" secondItem="Q0n-se-8RI" secondAttribute="top" id="eX5-UE-56D"/>
+                                                        <constraint firstItem="ST5-ie-END" firstAttribute="top" secondItem="Q0n-se-8RI" secondAttribute="top" id="q1n-Mr-dC8"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SCL-e0-Mfh" userLabel="Comment Count View">
                                                     <rect key="frame" x="229" y="182" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Bfp-Il-gV1">
@@ -241,8 +265,9 @@
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="SCL-e0-Mfh" firstAttribute="centerY" secondItem="Vts-Pi-dMv" secondAttribute="centerY" id="9As-KX-UYf"/>
+                                                <constraint firstItem="SCL-e0-Mfh" firstAttribute="leading" secondItem="Q0n-se-8RI" secondAttribute="trailing" constant="10" id="A3V-Pr-SGA"/>
                                                 <constraint firstItem="5eK-0o-mpW" firstAttribute="top" secondItem="WeC-tV-Uj9" secondAttribute="top" constant="12" id="A79-GA-wiA"/>
-                                                <constraint firstItem="SCL-e0-Mfh" firstAttribute="leading" secondItem="Vts-Pi-dMv" secondAttribute="trailing" constant="4" id="B9A-Sd-XLE"/>
+                                                <constraint firstItem="Q0n-se-8RI" firstAttribute="leading" secondItem="Vts-Pi-dMv" secondAttribute="trailing" id="DaJ-8K-QgT"/>
                                                 <constraint firstItem="XKc-rk-8eu" firstAttribute="leading" secondItem="2BQ-XL-Vkb" secondAttribute="leading" id="FGj-i6-HBa"/>
                                                 <constraint firstItem="4zk-Vv-HtB" firstAttribute="leading" secondItem="SCL-e0-Mfh" secondAttribute="trailing" constant="4" id="FSn-UJ-l1E"/>
                                                 <constraint firstItem="2BQ-XL-Vkb" firstAttribute="leading" secondItem="fRc-rJ-7uu" secondAttribute="leading" id="GaZ-XD-dod"/>
@@ -250,6 +275,7 @@
                                                 <constraint firstItem="Vts-Pi-dMv" firstAttribute="top" secondItem="2BQ-XL-Vkb" secondAttribute="bottom" id="LaU-qa-CNK"/>
                                                 <constraint firstItem="fRc-rJ-7uu" firstAttribute="trailing" secondItem="5eK-0o-mpW" secondAttribute="trailing" id="Lws-lK-3Ph"/>
                                                 <constraint firstAttribute="bottom" secondItem="Vts-Pi-dMv" secondAttribute="bottom" id="OW8-v6-1ze"/>
+                                                <constraint firstItem="Q0n-se-8RI" firstAttribute="centerY" secondItem="Vts-Pi-dMv" secondAttribute="centerY" id="QJw-hN-vru"/>
                                                 <constraint firstAttribute="bottom" secondItem="4zk-Vv-HtB" secondAttribute="bottom" id="VgP-vn-Dao"/>
                                                 <constraint firstItem="5eK-0o-mpW" firstAttribute="leading" secondItem="WeC-tV-Uj9" secondAttribute="leading" constant="10" id="cYs-gl-fJ4"/>
                                                 <constraint firstItem="XKc-rk-8eu" firstAttribute="centerY" secondItem="Vts-Pi-dMv" secondAttribute="centerY" id="dD2-V2-UtU"/>
@@ -282,6 +308,7 @@
                                     <outlet property="singerLabel" destination="8rc-Yb-seR" id="b44-SJ-cGT"/>
                                     <outlet property="songLabel" destination="WGq-21-XIL" id="5TN-ne-Heg"/>
                                     <outlet property="titleLabel" destination="5eK-0o-mpW" id="aGu-8e-97a"/>
+                                    <outlet property="viewCountLabel" destination="ST5-ie-END" id="fOE-Eq-xFs"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -356,5 +383,6 @@
         <image name="PF-CommentIcon" width="20" height="20"/>
         <image name="PF-DeleteIcon" width="20" height="20"/>
         <image name="PF-FavoriteIcon" width="20" height="20"/>
+        <image name="PF-ViewIcon" width="22" height="22"/>
     </resources>
 </document>
