--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -216,7 +216,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xm4-bL-pTE">
-                                                    <rect key="frame" x="219" y="172" width="40" height="40"/>
+                                                    <rect key="frame" x="180" y="172" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="hcw-XV-V6L"/>
                                                         <constraint firstAttribute="width" constant="40" id="sOj-36-MNj"/>
@@ -226,7 +226,31 @@
                                                         <action selector="favoriteButtonPressed" destination="h7b-s1-DXZ" eventType="touchUpInside" id="8a5-Mk-g3c"/>
                                                     </connections>
                                                 </button>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M1g-uG-kgN">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AuQ-UN-Jbn" userLabel="View Count View">
+                                                    <rect key="frame" x="220" y="181" width="33" height="22"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-ViewIcon" translatesAutoresizingMaskIntoConstraints="NO" id="iN5-Ac-jca">
+                                                            <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzc-vp-U9g">
+                                                            <rect key="frame" x="24" y="0.0" width="9" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="nzc-vp-U9g" secondAttribute="bottom" id="5W2-0A-fjs"/>
+                                                        <constraint firstItem="iN5-Ac-jca" firstAttribute="leading" secondItem="AuQ-UN-Jbn" secondAttribute="leading" id="QYG-aj-vWQ"/>
+                                                        <constraint firstItem="nzc-vp-U9g" firstAttribute="leading" secondItem="iN5-Ac-jca" secondAttribute="trailing" constant="2" id="Qex-Wa-jFv"/>
+                                                        <constraint firstAttribute="bottom" secondItem="iN5-Ac-jca" secondAttribute="bottom" id="XTO-WJ-9bx"/>
+                                                        <constraint firstAttribute="trailing" secondItem="nzc-vp-U9g" secondAttribute="trailing" id="agS-b2-07G"/>
+                                                        <constraint firstItem="iN5-Ac-jca" firstAttribute="top" secondItem="AuQ-UN-Jbn" secondAttribute="top" id="gBT-OX-7rP"/>
+                                                        <constraint firstItem="nzc-vp-U9g" firstAttribute="top" secondItem="AuQ-UN-Jbn" secondAttribute="top" id="kC3-RM-LpC"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M1g-uG-kgN" userLabel="Comment Count View">
                                                     <rect key="frame" x="263" y="182" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nNN-ao-YqG">
@@ -269,12 +293,14 @@
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="top" secondItem="OSc-wG-GHP" secondAttribute="bottom" constant="6" id="Pt0-kB-axt"/>
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="top" secondItem="Qe8-TQ-eDn" secondAttribute="top" constant="12" id="SXl-Me-q03"/>
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="leading" secondItem="Qe8-TQ-eDn" secondAttribute="leading" constant="10" id="ThC-sU-0e0"/>
+                                                <constraint firstItem="AuQ-UN-Jbn" firstAttribute="leading" secondItem="Xm4-bL-pTE" secondAttribute="trailing" id="Vh6-pp-K0Z"/>
                                                 <constraint firstItem="Brc-9e-1li" firstAttribute="leading" secondItem="OSc-wG-GHP" secondAttribute="leading" id="cjS-OC-SPm"/>
-                                                <constraint firstItem="M1g-uG-kgN" firstAttribute="leading" secondItem="Xm4-bL-pTE" secondAttribute="trailing" constant="4" id="fO8-EF-4OZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="Xm4-bL-pTE" secondAttribute="bottom" id="kPQ-gq-wc4"/>
                                                 <constraint firstItem="l8T-ZC-vro" firstAttribute="leading" secondItem="Brc-9e-1li" secondAttribute="leading" id="rFU-wP-xjM"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="leading" secondItem="VZc-kF-vNu" secondAttribute="leading" id="tc0-PO-1LJ"/>
+                                                <constraint firstItem="M1g-uG-kgN" firstAttribute="leading" secondItem="AuQ-UN-Jbn" secondAttribute="trailing" constant="10" id="y0K-lW-O5b"/>
                                                 <constraint firstItem="l8T-ZC-vro" firstAttribute="centerY" secondItem="Xm4-bL-pTE" secondAttribute="centerY" id="ycw-LA-Tgr"/>
+                                                <constraint firstItem="AuQ-UN-Jbn" firstAttribute="centerY" secondItem="Xm4-bL-pTE" secondAttribute="centerY" id="zMW-6e-7HV"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -297,6 +323,7 @@
                                     <outlet property="singerLabel" destination="xVD-2g-1IU" id="JPH-gz-1fk"/>
                                     <outlet property="songLabel" destination="Zep-6s-mp4" id="bvR-5G-rm0"/>
                                     <outlet property="titleLabel" destination="VZc-kF-vNu" id="lGo-wS-2oZ"/>
+                                    <outlet property="viewCountLabel" destination="nzc-vp-U9g" id="Yhd-2Y-STZ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -371,5 +398,6 @@
         <image name="CM-PlayIcon" width="35" height="35"/>
         <image name="PF-CommentIcon" width="20" height="20"/>
         <image name="PF-FavoriteIcon" width="20" height="20"/>
+        <image name="PF-ViewIcon" width="22" height="22"/>
     </resources>
 </document>
